feat(i18n): add localized date formatting and delete confirmation modal
Date Formatting:
- Updated dateFormatter.ts to use i18n locale (en-US, az-AZ, ru-RU)
- All date formats now localize based on language selection
- English: Nov 02, 2025 | Azerbaijani: 02 Noy 2025 | Russian: 02 нояб. 2025 г.
- Applied to formatDate, formatDateLong, formatBirthday, formatBirthdayLong
- Baku timezone formatters also localized

Delete Confirmation Modal:
- Replaced window.confirm with user-friendly modal dialog
- Shows member card preview before deletion
- Warning message about permanent deletion
- Translation keys for all 3 languages (6 new keys)
- Better UX with visual confirmation

Total: 6 new translation keys × 3 languages = 18 translations

--- a/frontend/public/locales/az/translation.json
+++ b/frontend/public/locales/az/translation.json
@@ -592,7 +592,15 @@
         "inactive": "Qeyri-aktiv",
         "pending": "Gözləyir",
         "suspended": "Dayandırılıb"
-      }
+      },
+      "deleteModal": {
+        "title": "Silməni Təsdiqlə",
+        "message": "{{name}} adlı üzvü silmək istədiyinizə əminsiniz?",
+        "warning": "⚠️ Bu əməliyyat geri qaytarıla bilməz. Bütün üzv məlumatları həmişəlik silinəcək.",
+        "confirm": "Bəli, Üzvü Sil",
+        "cancel": "Ləğv Et"
+      },
+      "deleteSuccess": "Üzv uğurla silindi!"
     }
   }
 }
