--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -592,7 +592,15 @@
         "inactive": "Неактивный",
         "pending": "Ожидание",
         "suspended": "Приостановлен"
-      }
+      },
+      "deleteModal": {
+        "title": "Подтвердите Удаление",
+        "message": "Вы уверены, что хотите удалить {{name}}?",
+        "warning": "⚠️ Это действие необратимо. Все данные участника будут удалены навсегда.",
+        "confirm": "Да, Удалить Участника",
+        "cancel": "Отмена"
+      },
+      "deleteSuccess": "Участник успешно удален!"
     }
   }
 }
