feat(i18n): translate CheckInHistory component with localized dates
- Added CheckInHistory translations (68 keys × 3 languages = 204 translations)
- Translation namespaces: admin.checkInHistory with sections for:
  * Page header and navigation
  * Stats cards (weekly, today, active instructors)
  * Filters (basic + advanced with time ranges, status, membership type)
  * Table columns and status badges
  * Empty state message
  * Member popup modal with visit statistics and history
- Replaced local date formatters with centralized dateFormatter.ts:
  * formatTime()  formatBakuTime() for check-in times
  * formatDate() using custom Azerbaijani formatter (25 Okt, 2025)
  * All dates now localize correctly in all 3 languages
- Updated status display to use translations instead of capitalize
- Member popup shows localized dates for join date and last check-in
- Check-in history in popup uses localized date/time formats

English: 'Viking Army Check-In History', 'Today's Check-In'
Azerbaijani: 'Viking Ordusu Giriş Tarixçəsi', 'Bugünkü Giriş'
Russian: 'История Посещений Армии Викингов', 'Сегодняшние Посещения'

Phase 4: CheckInHistory translation complete with proper date localization!

--- a/frontend/public/locales/az/translation.json
+++ b/frontend/public/locales/az/translation.json
@@ -601,6 +601,78 @@
         "cancel": "Ləğv Et"
       },
       "deleteSuccess": "Üzv uğurla silindi!"
+    },
+    "checkInHistory": {
+      "pageTitle": "Viking Ordusu Giriş Tarixçəsi",
+      "backButton": "Komanda Mərkəzinə Qayıt",
+      "stats": {
+        "weeklyCheckIn": "Həftəlik Giriş",
+        "resetsMonday": "Bazar ertəsi saat 2-də sıfırlanır",
+        "todayCheckIn": "Bugünkü Giriş",
+        "activeInstructors": "Aktiv Təlimçilər"
+      },
+      "filters": {
+        "advancedButton": "Ətraflı Döyüş Filterləri",
+        "searchPlaceholder": "Viking döyüşçülərini axtar...",
+        "today": "Bu Gün",
+        "thisWeek": "Bu Həftə",
+        "thisMonth": "Bu Ay",
+        "thisYear": "Bu İl",
+        "statusLabel": "Status:",
+        "allStatus": "Bütün Statuslar",
+        "inBattle": "Döyüşdə",
+        "battleComplete": "Döyüş Tamamlandı",
+        "membershipLabel": "Üzvlük Növü:",
+        "allTypes": "Bütün Növlər",
+        "singleBattle": "Tək Döyüş",
+        "monthlyWarrior": "Aylıq Döyüşçü",
+        "unlimitedViking": "Limitsiz Viking",
+        "companyArmy": "Şirkət Ordusu",
+        "fromDateLabel": "Tarixdən:",
+        "toDateLabel": "Tarixə qədər:",
+        "applyButton": "Döyüş Filterlərini Tətbiq Et",
+        "clearButton": "Hamısını Təmizlə",
+        "appliedFiltersLabel": "Tətbiq Edilən Filterlər:",
+        "statusFilter": "Status: {{status}}",
+        "typeFilter": "Növ: {{type}}",
+        "fromFilter": "Tarixdən: {{date}}",
+        "toFilter": "Tarixə: {{date}}"
+      },
+      "table": {
+        "nameColumn": "Ad",
+        "membershipColumn": "Üzvlük Növü",
+        "statusColumn": "Status",
+        "phoneColumn": "Telefon Nömrəsi",
+        "checkInColumn": "Giriş Vaxtı"
+      },
+      "emptyState": {
+        "title": "Giriş Tapılmadı",
+        "description": "Daha çox döyüşçü fəaliyyətini görmək üçün filterlərinizi tənzimləyin."
+      },
+      "memberPopup": {
+        "title": "Üzv Məlumatı",
+        "closeButton": "×",
+        "emailLabel": "E-poçt:",
+        "phoneLabel": "Telefon:",
+        "membershipLabel": "Üzvlük:",
+        "statusLabel": "Status:",
+        "joinedLabel": "Qoşulub:",
+        "lastCheckInLabel": "Son Giriş:",
+        "visitStatsTitle": "Ziyarət Statistikası",
+        "today": "Bu Gün",
+        "thisWeek": "Bu Həftə",
+        "thisMonth": "Bu Ay",
+        "thisYear": "Bu İl",
+        "allTime": "Bütün Vaxtlar",
+        "checkInHistoryTitle": "Giriş Tarixçəsi",
+        "noHistory": "Giriş tarixçəsi mövcud deyil",
+        "showingRecent": "Ümumi {{total}} girişdən 10 ən son giriş göstərilir"
+      },
+      "status": {
+        "active": "Aktiv",
+        "completed": "Tamamlandı"
+      },
+      "noValue": "—"
     }
   }
 }
